--- a/src/components/chrome/index.css
+++ b/src/components/chrome/index.css
@@ -1,26 +1,24 @@
-
 #title-bar {
-    background: var(--title-bar-background-color);
-    
-    width: 100%;
-    height: var(--title-bar-height);
-    display: flex;
-    border-bottom: var(--title-bar-border-bottom-height) solid rgba(255, 255, 255, 0.1);
+  background: var(--title-bar-background-color);
 
+  width: 100%;
+  height: var(--title-bar-height);
+  display: flex;
+  border-bottom: var(--title-bar-border-bottom-height) solid
+    rgba(255, 255, 255, 0.1);
 }
 #buttons-wrapper .button {
-    -webkit-app-region: no-drag;
-    vertical-align: middle;
-    height: 100%;
-    width: 30px;
-    background-size: 14px;
-    background-position: center;
-    background-repeat: no-repeat;
+  -webkit-app-region: no-drag;
+  vertical-align: middle;
+  height: 100%;
+  width: 30px;
+  background-size: 14px;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 #theme-button {
-    
-    padding: 5px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  padding: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
