--- a/src/index.css
+++ b/src/index.css
@@ -32,3 +32,45 @@ body {
 .adaptable--in-wizard {
   height: 100%;
 }
+a:link {
+  color: steelblue;
+  text-decoration: none;
+}
+
+a:visited {
+  color: green;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+li {
+  margin-bottom: 15px;
+}
+
+a:active {
+  text-decoration: underline;
+}
+body {
+  font-family: "Lato", BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto",
+    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    "Helvetica", "Arial", sans-serif !important;
+
+  font-size: 16px;
+
+  -webkit-font-smoothing: antialiased;
+  color: #333;
+  font-weight: 400;
+  line-height: 1;
+}
+
+html.ab--theme-dark body {
+  background: black;
+}
+
+h3 {
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
