--- a/src/components/chrome/LeftMenu/index.css
+++ b/src/components/chrome/LeftMenu/index.css
@@ -8,6 +8,12 @@
 #left-menu .brand img {
   width: 116px;
 }
+html.light-theme #left-menu .brand img.dark {
+  display: none;
+}
+html:not(.light-theme) #left-menu .brand img.light {
+  display: none;
+}
 
 #left-menu ul {
   list-style: none;
