ui minor updates

--- a/src/components/chrome/index.css
+++ b/src/components/chrome/index.css
@@ -16,6 +16,9 @@
   background-position: center;
   background-repeat: no-repeat;
 }
+#buttons-wrapper select {
+  width: 160px;
+}
 #buttons-wrapper select,
 #buttons-wrapper option {
   background: var(--main-background-color);
